# SALT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tutorial.ipynb
data/reproduction/Code_dataset/: cache-087d6ef99dcd88b0.arrow  cache-0cb286f08a8690c1.arrow  cache-1197b6ef23102ffa.arrow  cache-14fcf61102f8d034.arrow  cache-1b0c3ebfdb6face4.arrow  cache-1bbec1e36d77cf0e.arrow  cache-1d2e8c2ac920a9b7.arrow  cache-1db0d809c85984bf.arrow  cache-24eec4fe5a8a61f8.arrow  cache-42b09d45049f5d8c.arrow  cache-5a96162c75abd205.arrow  cache-6afb806a8a313287.arrow  cache-6ee7f1a24f1038e3.arrow  cache-9abf84691bd4cdcc.arrow  cache-a5a25ec120bfd9d1.arrow  cache-aa4246ccea281a29.arrow  cache-aaf88094f6553577.arrow  cache-b91e625153e7f8fe.arrow  cache-c5f08c9ec22366fa.arrow  cache-c866c9202a672519.arrow  cache-cbbf3c1361a1446a.arrow  cache-f76c9be03d88b303.arrow  cache-f79b1a323fd8b45e.arrow  data-00000-of-00001.arrow  state.json
data/reproduction/DNA_dataset/: data-00000-of-00001.arrow  state.json
data/reproduction/Kronecker_product_dataset/: data-00000-of-00001.arrow  (+1 more)
salt_benchmark/: __init__.py  datasets.py  tutorial_utils.py
salt_benchmark/evaluation/: __init__.py  atomic.py  uncertainty.py
salt_benchmark/generation/: __init__.py  cache.py  chat_templates.py  confidence.py  logprobs.py  vllm.py
salt_benchmark/tasks/: __init__.py  base.py  code.py  dna.py  kronecker.py  logic.py  matrix.py  needles.py
tests/: test_atomic_evaluation.py  test_datasets.py  test_generation.py  test_logic.py  test_prompts.py  test_tutorial_utils.py  test_uncertainty.py
(+8 files in other folders)
