[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salt-benchmark"
version = "0.1.0"
description = "Minimal release utilities for SALT benchmark task creation and generation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "SALT Authors"}]
dependencies = [
    "datasets>=2.18",
    "numpy>=1.23",
    "regex>=2023.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "nbformat>=5.9",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "jupyterlab_widgets>=3.0",
]
generation = ["transformers==4.57.6", "vllm==0.19.1"]
all = [
    "pytest>=7.0",
    "nbformat>=5.9",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "jupyterlab_widgets>=3.0",
    "transformers==4.57.6",
    "vllm==0.19.1",
]

[tool.setuptools.packages.find]
include = ["salt_benchmark*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "vllm: tests that require a real vLLM model and GPU environment",
]
